--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,6 @@
     "scripts": ["thirdParty/jquery-3.3.1.slim.min.js", "thirdParty/sweetalert.min.js", "background.js"],
     "persistent": false
   },
-<<<<<<< Updated upstream
   "content_scripts" : [
     {
       "matches": [
@@ -17,15 +16,8 @@
       "js" : [
         "content.js"
       ],
+      "css": ["content.css"],
       "run_at": "document_idle"
-=======
-
-  "content_scripts" : [
-    {
-      "matches": ["https://developer.chrome.com/*"],
-      "css": ["content.css"]
-
->>>>>>> Stashed changes
     }
   ],
   "page_action": {
