--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3"
+    "firebase-functions": "^2.0.3",
+    "request": "^2.88.0"
   },
   "private": true
 }
